Edit Logbook and Edit Slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -62,10 +62,10 @@ html
           li <p style ="text-align:left">- Paid User : Tidak terbatas
           li <b><p style ="text-align:left">2. Dalam hal limit</b>
           li <p style ="text-align:left">- Free User : Maksimal 50
-          li <p style ="text-align:left">- Paid User : Unlimitted
+          li <p style ="text-align:left">- Paid User : Unlimited
           li <b><p style ="text-align:left">3. Dalam hal durasi video, kapasitas video</b>
           li <p style ="text-align:left">- Free User : Maksimal 5 menit, Maksimal 25 MB
-          li <p style ="text-align:left">- Paid User : Unlimitted
+          li <p style ="text-align:left">- Paid User : Unlimited
       section
         ul    
           li <b><p style ="text-align:left">4. Dalam hal fasilitas tambahan</b>
