Edit Logbook and edit slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -87,12 +87,12 @@ html
         <h3 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h3>
         ul
           li
-          li <p style ="text-align:left">1. MLM(MultiLine Marketing)</p>
-          li <p style ="text-align:left">2. Advertising</p>
-          li <p style ="text-align:left">3. OlShop(Online Shopping)</p>
-          li <p style ="text-align:left">4. Saham</p>
-          li <p style ="text-align:left">5. Designer</p>
-          li <p style ="text-align:left">6. Kartu Undangan (Ulang Tahun, Pernikahan, dll)</p>
+          li MLM(MultiLine Marketing)
+          li Advertising
+          li OlShop(Online Shopping)
+          li Saham
+          li Designer
+          li Kartu Undangan (Ulang Tahun, Pernikahan, dll)
 
       section
         <h2 style="color:darkred"> Kelebihan VMOL</h2>
