--- a/src/index.jade
+++ b/src/index.jade
@@ -50,9 +50,9 @@ html
         <h2 style="color:darkred"> Mengenal VMOL</h2>
         ul
           li
-          li 1. Terbagi 2 : <b>Paid User & Free User</b>
-          li 2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.
-          li 3. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.
+          li <p style ="text-align:left">1. Terbagi 2 : <b>Paid User & Free User</b>
+          li <p style ="text-align:left">2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.
+          li <p style ="text-align:left">3. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.
       section
         <h3 style="color:darkred"> Perbedaan Free User & Paid User</h3>
         ul
