--- a/src/index.jade
+++ b/src/index.jade
@@ -37,7 +37,9 @@ html
         ul
           li 
           li Sebuah Aplikasi masa kini dalam pembuatan dan pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile
-
+      section
+        <h3 style="color:darkred" >Preview VMOL</h3>
+        <img src="img/preview.png" width="640px"></img>
       section
         <h2 style="color:darkred"> Sejarah VMOL</h2>
         ul
